Today_is_diarys/src/main/java/com/example/today_is_diarys/error/properties/ErrorProperties.java
package com.example.today_is_diarys.error.properties;

public interface ErrorProperties {

    int getStatus();

    String getMessage();
}
